04/homework/shopi-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipy
  namespace: shipy
spec:
  ports:
    - port: 7000
      targetPort: 7000
  selector:
    app: shipy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipy-deploy
  namespace: shipy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipy
  template:
    metadata:
      labels:
        app: shipy
    spec:
      containers:
        - name: shipy
          image: k8smaestro/shipy-webapp:1.41.5
          ports:
            - containerPort: 7000
